--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     background-color: rgb(6, 4, 28);
 }
 
+
 .links{
     left: 334px; 
     top: 22px; 
@@ -45,9 +46,9 @@ a:hover{
     text-decoration: underline;
 }
 
-.search-icon{
-    height: 40px; 
-    width: 40px;
+.fa-magnifying-glass{
+    padding-top: 7px;
+    font-size: 30px;
 }
 .nav {
     width: 100%;
@@ -89,6 +90,15 @@ a:hover{
     top: 10px;
     left: 50px;
 }
+.mode{
+    position: absolute;
+    left: 79%;
+    top: 20%;
+}
+.sun-icon{
+    width: 55px;
+    height: 55px;
+}
 .earth-text{
     left: 45px; 
     top: 35px; 
@@ -110,27 +120,27 @@ a:hover{
     border: 3px white solid
 
 }
-.open-user{
-    width: 50px; 
-    height: 44px; 
+.fa-user{
+    width: 40px; 
     left: 1292px; 
-    top: 15px; 
+    top: 30px; 
     position: absolute; 
-    background: #BAC355; 
-    border-radius: 10px
+    font-size: 30px;
+    border-radius: 50px
 }
 
 /* user window */
 
 .user-window {
+    cursor: pointer;
     width: 230px;
     height: 100px;
-    position: fixed; /* Change to fixed */
+    position: fixed; 
     background-color: #385191;
     border-radius: 20px;
     padding: 20px;
-    top: 150px; /* Adjust top position */
-    left: calc(50% + 88px); /* Adjust left position */
+    top: 130px;
+    left: 74%;
     text-align: center;
     border: 2px rgb(193, 191, 191) solid;
     z-index: 2000;
@@ -144,12 +154,13 @@ a:hover{
     font-size: 18px;
     cursor: pointer;
 }
-.user-window .user-icon{
+.user .fa-user{
     position: absolute;
-    width: 50px;
-    height: 50px;
-    left: 30px;
-    top: 30px;
+    left: 20px;
+    top: 19px;
+    font-size: 40px;
+    border-radius: 50%;
+    padding: 10px;
 }
 .user-window button{
     position: absolute;
@@ -174,8 +185,7 @@ a:hover{
     left: 120%;
 }
 .settings-icon{
-    width: 40px;
-    height: 40px;
+    font-size: 35px;
     position: absolute;
     top: 64%;
     left: 70%;
@@ -186,4 +196,171 @@ a:hover{
     top: -37px;
     left: 160px;
     z-index: -1;
+}
+
+.comments-box{
+    width: 315px; 
+    height: 51px; 
+    /* left: 20%;  */
+    top: 4000px; 
+    position: absolute
+}
+.comments{
+    width: 205.02px; 
+    left: 0px; 
+    top: 32px; 
+    position: absolute; 
+    color: white; 
+    font-size: 14px; 
+    font-family: Noto Sans Armenian; 
+    font-weight: 400; 
+    word-wrap: break-word
+}
+.comments-title{
+    width: 267.12px; 
+    left: 47.31px; 
+    top: -0px; 
+    position: absolute; 
+    color: white; 
+    font-size: 20px; 
+    font-family: Noto Sans Armenian; 
+    font-weight: 400; 
+    word-wrap: break-word
+}
+.comments-input-box{
+    width: 781.63px; 
+    height: 98.50px; 
+    left: 8px; 
+    top: 100.31px;
+    position: absolute
+}
+.comments-input{
+    width: 610px; 
+    padding: 15px; 
+    left: 57.17px; 
+    top: 24.75px; 
+    position: absolute; 
+    background: white; 
+    border-radius: 10px; 
+    border: 3px #5EA8FF solid;
+    resize: none;
+}
+.com-btn{
+    display: none;
+    position: absolute;
+    left: 74%;
+    top: 114%;
+    padding: 5px 20px 5px 20px;
+    background-color:  #5EA8FF;
+    border-radius: 10px;
+}
+.com-comment{
+    max-width: 600px;
+}
+.see-more-btn {
+    background-color: #0084ff; 
+    color: #fff;
+    border: none; 
+    padding: 5px 20px; 
+    cursor: pointer; 
+    font-size: 16px; 
+    border-radius: 10px; 
+    transition: background-color 0.3s; 
+    position: absolute;
+    left:55vh;
+ 
+}
+
+.see-more-btn:hover {
+    background-color: #0056b3;
+}
+
+footer {
+    background-color: #1e1d1d;
+    color: #fff;
+    padding: 20px;
+    width: 100%;
+    min-height: 300px;
+    text-align: center;
+    position: absolute; 
+    top: 6100px;
+    bottom: 0px;
+    
+}
+.footer-box{
+    display: flex;
+    justify-content:space-evenly;
+}
+
+footer span {
+    color: gray;
+    margin: 20px; /* Add spacing between spans */
+    cursor: pointer; /* Add cursor pointer */
+}
+
+  /* Change hover effect */
+  footer span:hover {
+    text-decoration: underline;
+  }
+footer span,p{
+    margin: 10px;
+}
+.second-hr{
+    margin: 20px;
+    border: none;
+    border-top: 2px solid #6c6969; /* Change the border color */
+}
+.profile{
+    font-size: 28px;
+    color: #858383;
+    padding: 7px;
+    border-radius: 50px;
+
+}
+.profile:hover{
+    font-size: 28px;
+    color: #201d1d;
+    background-color: #DBCC35;
+    border-radius: 50px;
+    padding: 5px;
+
+}
+.brands{
+    display: flex;
+    justify-content:center;
+}
+
+
+/* heart */
+.heart {
+    color: #ff0000; /* Set the heart color */
+    font-size: 18px; /* Adjust the size of the heart */
+    position: relative;
+    animation: heartbeat 1s infinite;
+  }
+
+  @keyframes heartbeat {
+    0% {
+      transform: scale(0.75);
+    }
+    20% {
+      transform: scale(1);
+    }
+    40% {
+      transform: scale(0.75);
+    }
+    60% {
+      transform: scale(1);
+    }
+    80% {
+      transform: scale(0.75);
+    }
+    100% {
+      transform: scale(0.75);
+    }
+  }
+
+.comment-container{
+    top:5220px; 
+    margin-left: 30vh
 }
